--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/8bit-wonder');
+@import url('https://fonts.cdnfonts.com/css/eight-bit-dragon');
 
+/* 
+BACK UP */
+/* font-family: '8Bit Wonder'; */
 
 
 .TEXT {
-    font-family: '8BIT WONDER';
+    font-family: 'Eight Bit Dragon', sans-serif;
 }
